# P3

2021a2-u02-listas-luanirolon/: CMakeLists.txt  README.md
2021a2-u02-listas-luanirolon/Ej-01/: fnInvierte.h  main.cpp
2021a2-u02-listas-luanirolon/Ej-02/: main.cpp  noentero.h
2021a2-u02-listas-luanirolon/Ej-03/: main.cpp
2021a2-u02-listas-luanirolon/Ej-04/: main.cpp  union.cpp  union.h
2021a2-u02-listas-luanirolon/Ej-05/: CircList.h  main.cpp
2021a2-u02-listas-luanirolon/Ej-06/: main.cpp
2021a2-u02-listas-luanirolon/Ejercicio-02/: feliminar.h  main.cpp
2021a2-u02-listas-luanirolon/Lista/: Lista.h  Nodo.h
2022-c2-u00-repaso-luanirolon/: CMakeLists.txt  README.md
2022-c2-u00-repaso-luanirolon/Ej-01/: Circulo.cpp  Circulo.h  Color.h  Cuadrado.cpp  Cuadrado.h  Geometria.cpp  Geometria.h  Triangulo.h  main.cpp
2022-c2-u00-repaso-luanirolon/Ej-02/: Calculadora.h  main.cpp
2022-c2-u00-repaso-luanirolon/Ej-03/: Calculadora.cpp  Calculadora.h  main.cpp
2022-c2-u00-repaso-luanirolon/Ej-04/: main.cpp
2022-c2-u00-repaso-luanirolon/Ej-05/: Entero.cpp  Entero.h  main.cpp
2022-c2-u00-repaso-luanirolon/Ej-06/: main.cpp
2022CDx-u01-recursividad-luanirolon/: CMakeLists.txt
2022CDx-u01-recursividad-luanirolon/Ej-01/: main.cpp  potencia.cpp
2022CDx-u01-recursividad-luanirolon/Ej-02/: main.cpp  sumatoria.cpp  sumatoria.h
primer-parcial-comision-a2-luanirolon/: CMakeLists.txt  Ej1.cpp  Ej2.cpp  Ej3.cpp  README.md
u03-pilas-luanirolon/: CMakeLists.txt
u04-colas-luanirolon/: CMakeLists.txt
u05-arboles-luanirolon/: CMakeLists.txt
(+33 files in other folders)
